# sdg-kubeflow-practice-2

./: .env  .gitignore  daddy_pipeline.yaml  docker-compose.yaml  main.py  pyproject.toml
coponents/: chunking.py  db_worker.py  llm_candidate_generator.py  llm_dean.py  llm_eval.py  llm_md.py  llm_seed_data.py
db/: schema.sql
pipeline/: daddy_pipeline.py
